--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
 <html>
-<H1> Hello Guru ji </H1>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
