--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.I am new </p>
+<p>I'm hosted with GitHub Pages.I am new OM Namah shivay </p>
+
 </body>
 </html>
