i am adding the file now

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.I am new OM Namah shivay JGD</p>
+<p>I'm hosted with GitHub Pages.I am new OM Namah shivay JGD. I am also new</p>
 
 </body>
 </html>
