--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello God is Great World</h1>
+<h1>This will be my first project</h1>
 <p>I'm hosted with GitHub Pages.I am new OM Namah shivay JGD. I am also new</p>
 
 </body>
